# NodeNet

./: .gitignore  LICENSE  README.md
cpp/NodeNet/: CMakeLists.txt  _imgui.ini  imgui.ini  imnodes.cpp  imnodes.h  run.sh
cpp/NodeNet/dependencies/imgui-1.76/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h  trainer.cpp  trainer.h
cpp/NodeNet/src/: data_storages.h  data_types.cpp  data_types.h  editor.cpp  editor.h  executor.cpp  executor.h  generator.cpp  generator.h  graph.h  interpriter.cpp  main.cpp  node_editor.cpp  node_editor.h  node_generator.h  settings.h  templates.h  utils.cpp  utils.h
cpp/NodeNet/templates/: finish.node  test.node
planing/: Code generation alg.drawio
planning/: Code generation alg.drawio  Dataset.drawio  icon.drawio
src/: design.py  global_vars.py  interpreter.py  io_pins.py  main.py  node.py  node_connection.py  node_connection_graph.py  node_editor.py  node_editor_scene.py  node_editor_viewport.py  node_graph.py  node_pin.py  node_pin_graph.py  node_scene.py  prefab_nodes.py  settings.py  test_node.node  tests.py  utils.py
src/NodeNet/: CMakeLists.txt  Makefile  imgui.ini  imnodes.cpp  imnodes.h  k  out.cereal  run.sh  t.py  test.py
src/NodeNet/dependencies/gl3w/include/GL/: glcorearb.h
src/NodeNet/dependencies/imgui-1.76/: imgui.h  imgui_internal.h
src/NodeNet/include/: TextEditor.cpp  TextEditor.h
src/NodeNet/include/implot/: implot.cpp
src/NodeNet/py/: injected_test.py  injection.py  test.py
src/NodeNet/src/: ThreadsManager.h  code_manager.cpp  code_manager.h  data_types.cpp  data_types.h  dataset_manager.cpp  dataset_manager.h  editor.cpp  editor.h  executor.cpp  executor.h  fonts.h  generator.cpp  generator.h  logger.h  main.cpp  nodespy.h  plotter.h  serializerTest.h  settings.h  templates.h  tinyfiledialogs.c  tinyfiledialogs.h  trainer.cpp  trainer.h  utils.cpp  utils.h
src/NodeNet/src/Core/: data_types.cpp  data_types.h  exceptions.h  generator.cpp  generator.h  utils.cpp  utils.h
src/NodeNet/src/Debug/: templates.h
src/NodeNet/src/Generation/: executor.cpp  executor.h
src/NodeNet/src/Log/: logger.h
src/NodeNet/src/Net/: code_manager.h  dataset_manager.h  trainer.cpp  trainer.h
src/NodeNet/templates/: finish.node  start.node  test.node
src/NodeNet/templates/Core/: dense.node  finish.node  flatten.node
src/NodeNet/templates/Inputs/: input_1D.node  input_2D.node  input_3D.node
src/prefabs/: constant.node  square.node
